add references to notebooks

--- a/diversity/diversity_algorithms/greedy-selection-on-comments.ipynb
+++ b/diversity/diversity_algorithms/greedy-selection-on-comments.ipynb
@@ -5,7 +5,9 @@
    "id": "27253db5",
    "metadata": {},
    "source": [
-    "# Diversity in Reddit Comments"
+    "# Diversity in Reddit Comments\n",
+    "\n",
+    "This notebook implements the Greedy Selection Algorithm that was  the [Improving Reccomendation Diversity](https://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.8.5232&rep=rep1&type=pdf) research paper. The dataset can be found [here](https://www.kaggle.com/sherinclaudia/sarcastic-comments-on-reddit)."
    ]
   },
   {
@@ -13,9 +15,7 @@
    "id": "5425d0ce",
    "metadata": {},
    "source": [
-    "## Reading the Data\n",
-    "\n",
-    "[Dataset](https://www.kaggle.com/sherinclaudia/sarcastic-comments-on-reddit)"
+    "## Reading the Data"
    ]
   },
   {
