--- a/diversity/diversity_algorithms/greedy-selection-on-subreddits.ipynb
+++ b/diversity/diversity_algorithms/greedy-selection-on-subreddits.ipynb
@@ -6,7 +6,9 @@
     "id": "HC7cqoXDNFIk"
    },
    "source": [
-    "# Diversity in Recommendation Systems - Bounded Greedy Algorithm"
+    "# Diversity in Recommendation Systems - Bounded Greedy Algorithm\n",
+    "\n",
+    "This notebook implements the Greedy Selection Algorithm that was defined in the [Improving Reccomendation Diversity](https://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.8.5232&rep=rep1&type=pdf) research paper. The dataset can be found [here](https://www.kaggle.com/timschaum/subreddit-recommender)."
    ]
   },
   {
