--- a/diversity/diversity_algorithms/total-diversity-effect-comments.ipynb
+++ b/diversity/diversity_algorithms/total-diversity-effect-comments.ipynb
@@ -5,9 +5,9 @@
    "id": "becd69d3",
    "metadata": {},
    "source": [
-    "# Total Diversity Effect (TDE) Recommendations\n",
+    "# Total Diversity Effect (TDE) Ranking Recommendations\n",
     "\n",
-    "[Source](https://sci-hub.se/https://ieeexplore.ieee.org/document/6605824/references#references)"
+    "This notebook implements the TDE Ranking Algorithm that was defined in the [Enhancing Diversity-Accuracy Technique on User-Based Top-N Recommendation Algorithms](https://sci-hub.se/https://ieeexplore.ieee.org/document/6605824/references#references) research paper. The dataset can be found [here](https://www.kaggle.com/timschaum/subreddit-recommender).\n"
    ]
   },
   {
